--- a/hotel-be/hotel-management/src/main/resources/application.properties
+++ b/hotel-be/hotel-management/src/main/resources/application.properties
@@ -55,7 +55,7 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 
 # ========== TEST MODE ==========
-app.test.mode=true
+app.test.mode=false
 
 
 
